recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: illegal start of simple expression
  if(){
     ^Tree:12: error: ')' expected but '}' found.
} 
^